identity-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wso2is-deployment
  namespace : wso2
spec:
  replicas: 2
  minReadySeconds: 30
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  selector:
    matchLabels:
      deployment: wso2is
      app: wso2is
      monitoring: jmx
      pod: wso2is
  template:
    metadata:
      labels:
        deployment: wso2is
        app: wso2is
        monitoring: jmx
        pod: wso2is
    spec:
      hostAliases:
        - ip: "127.0.0.1"
          hostnames:
            - "wso2is"
      containers:
      - name: wso2is
        image: wso2/wso2is:5.10.0
        livenessProbe:
          exec:
            command:
            - /bin/sh
            - -c
            - nc -z localhost 9443
          initialDelaySeconds: 250
          periodSeconds: 10
        readinessProbe:
          exec:
            command:
              - /bin/sh
              - -c
              - nc -z localhost 9443
          initialDelaySeconds: 1000
          periodSeconds: 10
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "1Gi"
            cpu: "1000m"
          limits:
            memory: "2Gi"
            cpu: "2000m"
        lifecycle:
          preStop:
            exec:
              command:  ['sh', '-c', '${WSO2_SERVER_HOME}/bin/wso2server.sh stop']
        securityContext:
          runAsUser: 802
        ports:
        - containerPort: 9763
          protocol: TCP
        - containerPort: 9443
          protocol: TCP
        volumeMounts:
        - name: identity-server-conf
          mountPath: /home/wso2carbon/wso2-config-volume/repository/conf/deployment.toml
          subPath: deployment.toml
      serviceAccountName: "wso2svc-account"
      volumes:
      - name: identity-server-conf
        configMap:
          name: identity-server-conf
---
